--- a/src/app/Components/prueba-font-awesome/prueba-font-awesome.component.html
+++ b/src/app/Components/prueba-font-awesome/prueba-font-awesome.component.html
@@ -26,10 +26,10 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobremi">Sobre mí</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experiencia">Experiencia</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#educacion">Educación</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a></li>
                 <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>-->
             </ul>
         </div>
@@ -37,7 +37,7 @@
     <!-- Page Content-->
     <div class="container-fluid p-0">
         <!-- About-->
-        <section class="resume-section" id="about">
+        <section class="resume-section" id="sobremi">
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     Stefan Daniel
@@ -56,7 +56,7 @@
         </section>
         <hr class="m-0" />
         <!-- Experience-->
-        <section class="resume-section" id="experience">
+        <section class="resume-section" id="experiencia">
             <div class="resume-section-content">
                 <h2 class="mb-5">Experiencia</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -71,7 +71,7 @@
         </section>
         <hr class="m-0" />
         <!-- Education-->
-        <section class="resume-section" id="education">
+        <section class="resume-section" id="educacion">
             <div class="resume-section-content">
                 <h2 class="mb-5">Educación</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -94,7 +94,7 @@
         </section>
         <hr class="m-0" />
         <!-- Skills-->
-        <section class="resume-section" id="skills">
+        <section class="resume-section" id="habilidades">
             <div class="resume-section-content">
                 <h2 class="mb-5">Habilidades</h2>
                 <div class="subheading mb-3">Lenguajes de programación</div>
